<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ark.center</groupId>
    <artifactId>ark-center-iam</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>ark-center-iam-client</module>
        <module>ark-center-iam-app</module>
        <module>ark-center-iam-adapter</module>
        <module>ark-center-iam-domain</module>
        <module>ark-center-iam-infra</module>
        <module>ark-center-iam-start</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.ark.boot</groupId>
                <artifactId>ark-dependencies</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-iam-client</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-iam-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-iam-app</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-iam-infra</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.ark.center</groupId>
                <artifactId>ark-center-iam-domain</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.ark.ddd</groupId>
                <artifactId>ark-component-ddd-application</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>


            <dependency>
                <groupId>com.ark.ddd</groupId>
                <artifactId>ark-component-ddd-domain</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>com.ark.ddd</groupId>
                <artifactId>ark-component-ddd-infrastructure</artifactId>
                <version>1.0.0-SNAPSHOT</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>21</source>
                    <target>21</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <!-- Lombok 注解处理器 -->
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.30</version>
                        </path>
                        <!-- MapStruct 注解处理器 -->
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>1.5.3.Final</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>